--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,8 +1,9 @@
 {
   "appId": "com.agbeauty.app",
   "appName": "AG Beauty",
-  "webDir": "out",
   "server": {
-    "androidScheme": "https"
+    "url": "https://ag-beauty.onrender.com",
+    "androidScheme": "https",
+    "cleartext": true
   }
 }
