--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "express": "^4.21.2",
     "formidable": "^3.5.2",
     "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
