--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate-images": "node scripts/migrateImages.mjs"
   },
   "dependencies": {
     "@capacitor/android": "^6.2.0",
@@ -17,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "formidable": "^3.5.2",
     "framer-motion": "^11.15.0",
