--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate-images": "node scripts/migrateImages.mjs"
+    "migrate-images": "node scripts/migrateImages.mjs",
+    "clean-gallery": "node scripts/cleanGallery.mjs"
   },
   "dependencies": {
     "@capacitor/android": "^6.2.0",
