mise a jour capacitor.config.json

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,7 +2,7 @@
   "appId": "com.agbeauty.app",
   "appName": "AG Beauty",
   "server": {
-    "url": "https://ag-beauty.onrender.com",
+    "url": "https://ag-beauty.netlify.app",
     "androidScheme": "https",
     "cleartext": true
   }
