--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^6.2.0",
+    "@netlify/plugin-nextjs": "^5.9.3",
     "@types/node": "^22.10.2",
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
